--- a/SisFiespApplication/SisFiespApplication.csproj
+++ b/SisFiespApplication/SisFiespApplication.csproj
@@ -6,12 +6,14 @@
 
   <ItemGroup>
     <Content Remove="wwwroot\js\aluno.js" />
+    <Content Remove="wwwroot\js\diagnostico.js" />
     <Content Remove="wwwroot\js\escola.js" />
     <Content Remove="wwwroot\js\usuario.js" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="wwwroot\js\aluno.js" />
+    <None Include="wwwroot\js\diagnostico.js" />
     <None Include="wwwroot\js\escola.js" />
     <None Include="wwwroot\js\usuario.js" />
   </ItemGroup>
