--- a/SisFiespApplication/SisFiespApplication.csproj
+++ b/SisFiespApplication/SisFiespApplication.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\bower_components\" />
+    <Folder Include="wwwroot\arquivos\" />
     <Folder Include="wwwroot\arquivos\" />
   </ItemGroup>
 
