Alterações view versão

--- a/SisFiespApplication/appsettings.json
+++ b/SisFiespApplication/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;DataBase=sisfiesp;Uid=root;Pwd=123456",
+    "ProductionConnection": "Server=mysql5036.site4now.net;DataBase=db_a70d3e_viniciu;Uid=a70d3e_viniciu;Pwd=sisfiesp123"
+  }
 }
