--- a/SisFiespApplication/SisFiespApplication.csproj
+++ b/SisFiespApplication/SisFiespApplication.csproj
@@ -14,12 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\js\avaliacao.js" />
-    <None Include="wwwroot\js\aluno.js" />
-    <None Include="wwwroot\js\modalidade.js" />
-    <None Include="wwwroot\js\diagnostico.js" />
-    <None Include="wwwroot\js\escola.js" />
-    <None Include="wwwroot\js\usuario.js" />
+    <None Include="wwwroot\jsView\avaliacao.js" />
+    <None Include="wwwroot\jsView\aluno.js" />
+    <None Include="wwwroot\jsView\modalidade.js" />
+    <None Include="wwwroot\jsView\diagnostico.js" />
+    <None Include="wwwroot\jsView\escola.js" />
+    <None Include="wwwroot\jsView\usuario.js" />
   </ItemGroup>
 
   <ItemGroup>
