--- a/SisFiespApplication/SisFiespApplication.csproj
+++ b/SisFiespApplication/SisFiespApplication.csproj
@@ -14,6 +14,83 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales-all.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales-all.min.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\af.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ar-dz.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ar-kw.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ar-ly.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ar-ma.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ar-sa.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ar-tn.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ar.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\az.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\bg.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\bs.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ca.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\cs.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\cy.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\da.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\de-at.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\de.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\el.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\en-au.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\en-gb.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\en-nz.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\eo.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\es-us.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\es.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\et.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\eu.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\fa.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\fi.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\fr-ca.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\fr-ch.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\fr.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\gl.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\he.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\hi.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\hr.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\hu.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\hy-am.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\id.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\is.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\it.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ja.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ka.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\kk.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ko.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\lb.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\lt.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\lv.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\mk.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ms.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\nb.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ne.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\nl.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\nn.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\pl.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\pt-br.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\pt.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ro.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ru.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\sk.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\sl.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\sq.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\sr-cyrl.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\sr.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\sv.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ta-in.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\th.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\tr.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\ug.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\uk.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\uz.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\vi.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\zh-cn.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\locales\zh-tw.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\main.js" />
+    <None Include="wwwroot\assets\pages\full-calender\lib\main.min.js" />
     <None Include="wwwroot\jsView\avaliacao.js" />
     <None Include="wwwroot\jsView\aluno.js" />
     <None Include="wwwroot\jsView\modalidade.js" />
